// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floodOpacity renders 0 1`] = `
Array [
  .c0 {
  flood-opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders function 1`] = `
Array [
  .c0 {
  flood-opacity: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: has;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: has;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders invalid theme path 1`] = `
Array [
  .c0 {
  flood-opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders negative number 1`] = `
Array [
  .c0 {
  flood-opacity: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  flood-opacity: July;
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: July;
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    flood-opacity: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    flood-opacity: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-opacity: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-opacity: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  flood-opacity: July;
}

@media May {
  .c0 {
    flood-opacity: August;
  }
}

@media April {
  .c0 {
    flood-opacity: September;
  }
}

@media January {
  .c0 {
    flood-opacity: November;
  }
}

@media April {
  .c0 {
    flood-opacity: August;
  }
}

@media June {
  .c0 {
    flood-opacity: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: July;
}

@media May {
  .c0 {
    flood-opacity: August;
  }
}

@media April {
  .c0 {
    flood-opacity: September;
  }
}

@media January {
  .c0 {
    flood-opacity: November;
  }
}

@media April {
  .c0 {
    flood-opacity: August;
  }
}

@media June {
  .c0 {
    flood-opacity: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-opacity: November;
  }
}

@media April {
  .c0 {
    flood-opacity: January;
  }
}

@media January {
  .c0 {
    flood-opacity: December;
  }
}

@media April {
  .c0 {
    flood-opacity: April;
  }
}

@media June {
  .c0 {
    flood-opacity: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-opacity: November;
  }
}

@media April {
  .c0 {
    flood-opacity: January;
  }
}

@media January {
  .c0 {
    flood-opacity: December;
  }
}

@media April {
  .c0 {
    flood-opacity: April;
  }
}

@media June {
  .c0 {
    flood-opacity: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    flood-opacity: July;
  }
}

@media April {
  .c0 {
    flood-opacity: August;
  }
}

@media January {
  .c0 {
    flood-opacity: September;
  }
}

@media April {
  .c0 {
    flood-opacity: November;
  }
}

@media June {
  .c0 {
    flood-opacity: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    flood-opacity: July;
  }
}

@media April {
  .c0 {
    flood-opacity: August;
  }
}

@media January {
  .c0 {
    flood-opacity: September;
  }
}

@media April {
  .c0 {
    flood-opacity: November;
  }
}

@media June {
  .c0 {
    flood-opacity: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-opacity: January;
  }
}

@media April {
  .c0 {
    flood-opacity: December;
  }
}

@media January {
  .c0 {
    flood-opacity: April;
  }
}

@media April {
  .c0 {
    flood-opacity: May;
  }
}

@media June {
  .c0 {
    flood-opacity: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-opacity: January;
  }
}

@media April {
  .c0 {
    flood-opacity: December;
  }
}

@media January {
  .c0 {
    flood-opacity: April;
  }
}

@media April {
  .c0 {
    flood-opacity: May;
  }
}

@media June {
  .c0 {
    flood-opacity: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders postitive number 1`] = `
Array [
  .c0 {
  flood-opacity: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders string 1`] = `
Array [
  .c0 {
  flood-opacity: July;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: July;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: June;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: June;
}

<div
    className="c0"
  />,
]
`;

exports[`floodOpacity renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`floodOpacity renders valid theme path 1`] = `
Array [
  .c0 {
  flood-opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-opacity: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
